cargo_check.log
warning: field `cortex` is never read
  --> r2d2-sensory/src/gateway.rs:14:5
   |
13 | pub struct SensoryGateway {
   |            -------------- field in this struct
14 |     cortex: Arc<CortexRegistry>,
   |     ^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `r2d2-sensory` (lib) generated 1 warning
    Checking r2d2-mcp v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-mcp)
error[E0277]: the trait bound `r2d2_kernel::Fragment<r2d2_kernel::Signal>: serde::Serialize` is not satisfied
    --> r2d2-mcp/src/main.rs:121:119
     |
 121 | ...                   match gw.ingest_thought("SensoryGateway", "AudioAgent", serde_json::to_string(&fragment).unwrap_or_default()).await {
     |                                                                               --------------------- ^^^^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `r2d2_kernel::Fragment<r2d2_kernel::Signal>`
     |                                                                               |
     |                                                                               required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `r2d2_kernel::Fragment<r2d2_kernel::Signal>` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde_core::ser::Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 249 others
note: required by a bound in `serde_json::to_string`
    --> /home/jGx/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_json-1.0.149/src/ser.rs:2247:17
     |
2245 | pub fn to_string<T>(value: &T) -> Result<String>
     |        --------- required by a bound in this function
2246 | where
2247 |     T: ?Sized + Serialize,
     |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `r2d2_kernel::Fragment<r2d2_kernel::Signal>: serde::Serialize` is not satisfied
    --> r2d2-mcp/src/main.rs:144:120
     |
 144 | ...                   match gw.ingest_thought("SensoryGateway", "VisionAgent", serde_json::to_string(&fragment).unwrap_or_default()).await {
     |                                                                                --------------------- ^^^^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `r2d2_kernel::Fragment<r2d2_kernel::Signal>`
     |                                                                                |
     |                                                                                required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `r2d2_kernel::Fragment<r2d2_kernel::Signal>` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde_core::ser::Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 249 others
note: required by a bound in `serde_json::to_string`
    --> /home/jGx/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_json-1.0.149/src/ser.rs:2247:17
     |
2245 | pub fn to_string<T>(value: &T) -> Result<String>
     |        --------- required by a bound in this function
2246 | where
2247 |     T: ?Sized + Serialize,
     |                 ^^^^^^^^^ required by this bound in `to_string`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `r2d2-mcp` (bin "r2d2-mcp") due to 2 previous errors
